--- a/config.toml
+++ b/config.toml
@@ -75,6 +75,14 @@ base_shoot_cost = 100 # Placeholder
 # MVP roster sizing
 core_count = 3
 freelance_count = 5
+core_ids = ["core_lena_watts", "core_milo_park", "core_tess_rowan"]
+freelance_ids = [
+  "free_jade_voss",
+  "free_nico_blade",
+  "free_rin_holt",
+  "free_kira_sol",
+  "free_eli_hart"
+]
 
 # Placeholder defaults for performer stats (if MVP docs specify, replace here).
 default_star_power = 1  # Placeholder
@@ -82,6 +90,62 @@ max_fatigue = 100      # Placeholder
 fatigue_per_shoot = 10 # Placeholder
 fatigue_recovery_per_day = 5 # Placeholder
 starting_loyalty = 50  # Placeholder
+
+[performers.catalog.core_lena_watts]
+id = "core_lena_watts"
+name = "Lena Watts"
+type = "core"
+star_power = 3
+description = "Polished lead with calm authority and a steady fanbase."
+
+[performers.catalog.core_milo_park]
+id = "core_milo_park"
+name = "Milo Park"
+type = "core"
+star_power = 2
+description = "Warm, versatile collaborator who fits any concept."
+
+[performers.catalog.core_tess_rowan]
+id = "core_tess_rowan"
+name = "Tess Rowan"
+type = "core"
+star_power = 1
+description = "Scrappy newcomer with raw energy and room to grow."
+
+[performers.catalog.free_jade_voss]
+id = "free_jade_voss"
+name = "Jade Voss"
+type = "freelance"
+star_power = 3
+description = "Seasoned pro who delivers instantly but keeps it professional."
+
+[performers.catalog.free_nico_blade]
+id = "free_nico_blade"
+name = "Nico Blade"
+type = "freelance"
+star_power = 2
+description = "Flashy specialist known for bold aesthetics and fast turnarounds."
+
+[performers.catalog.free_rin_holt]
+id = "free_rin_holt"
+name = "Rin Holt"
+type = "freelance"
+star_power = 2
+description = "Reliable utility hire with a clean, consistent style."
+
+[performers.catalog.free_kira_sol]
+id = "free_kira_sol"
+name = "Kira Sol"
+type = "freelance"
+star_power = 1
+description = "Quiet wildcard who surprises when the concept is right."
+
+[performers.catalog.free_eli_hart]
+id = "free_eli_hart"
+name = "Eli Hart"
+type = "freelance"
+star_power = 1
+description = "Budget-friendly helper with earnest charm and limited reach."
 
 [content_types]
 # MVP content types
@@ -101,6 +165,116 @@ starting_reputation = 0 # Placeholder
 
 # Tier 1 location unlock
 location_tier_1_unlock_cost = 2000 # Placeholder
+
+[locations]
+tier0_ids = [
+  "location_basic_bedroom",
+  "location_shared_apartment",
+  "location_spare_office"
+]
+tier1_ids = [
+  "location_studio_loft",
+  "location_city_apartment",
+  "location_small_warehouse"
+]
+
+[locations.catalog.location_basic_bedroom]
+id = "location_basic_bedroom"
+name = "Basic Bedroom"
+tier = 0
+cost = 50
+unlock_cost = 0
+unlock_requirements = []
+description = "A simple, familiar space for low-stakes starter shoots."
+
+[locations.catalog.location_shared_apartment]
+id = "location_shared_apartment"
+name = "Shared Apartment"
+tier = 0
+cost = 80
+unlock_cost = 0
+unlock_requirements = []
+description = "A modest room with everyday clutter and casual vibes."
+
+[locations.catalog.location_spare_office]
+id = "location_spare_office"
+name = "Spare Office"
+tier = 0
+cost = 120
+unlock_cost = 0
+unlock_requirements = []
+description = "A quiet corner with a desk setup for clean, focused content."
+
+[locations.catalog.location_studio_loft]
+id = "location_studio_loft"
+name = "Studio Loft"
+tier = 1
+cost = 300
+unlock_cost = 750
+unlock_requirements = []
+description = "A compact loft with improved lighting and a cleaner backdrop."
+
+[locations.catalog.location_city_apartment]
+id = "location_city_apartment"
+name = "City Apartment"
+tier = 1
+cost = 450
+unlock_cost = 1100
+unlock_requirements = []
+description = "A tidy urban space that feels more professional and polished."
+
+[locations.catalog.location_small_warehouse]
+id = "location_small_warehouse"
+name = "Small Warehouse"
+tier = 1
+cost = 600
+unlock_cost = 1500
+unlock_requirements = []
+description = "A larger, flexible space suited for varied set dressing."
+
+[themes.mvp]
+theme_ids = [
+  "theme_casual",
+  "theme_glamour",
+  "theme_fitness",
+  "theme_boudoir",
+  "theme_nightlife"
+]
+
+[themes.mvp.theme_casual]
+id = "theme_casual"
+name = "Casual"
+description = "Everyday, approachable vibes that feel natural and low-pressure."
+followers_mult = 1.05
+revenue_mult = 0.90
+
+[themes.mvp.theme_glamour]
+id = "theme_glamour"
+name = "Glamour"
+description = "High-polish styling with bold poses and premium presentation."
+followers_mult = 0.95
+revenue_mult = 1.10
+
+[themes.mvp.theme_fitness]
+id = "theme_fitness"
+name = "Fitness"
+description = "Athletic energy with clean lighting and motion-focused shots."
+followers_mult = 1.10
+revenue_mult = 0.95
+
+[themes.mvp.theme_boudoir]
+id = "theme_boudoir"
+name = "Boudoir"
+description = "Intimate, classy sets with warm lighting and confident framing."
+followers_mult = 0.90
+revenue_mult = 1.15
+
+[themes.mvp.theme_nightlife]
+id = "theme_nightlife"
+name = "Nightlife"
+description = "Club-style ambiance with neon accents and late-night mood."
+followers_mult = 1.00
+revenue_mult = 1.00
 
 [story]
 # Act 1 story event trigger days (from docs/DATA_STORY_EVENTS.md)
